--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Plate and Kays For Cars</title>
+    <title>Plates N Kays For Cars</title>
     <link href="https://fonts.googleapis.com/css2?family=Cafe&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Face|Fargo|Helvetica|IBM|Munistic|Playback|Prompt|Raptors|Robot|Saira|Sanidana|Sleeping|Trajan|Verdana&display=swap" rel="stylesheet">
 
